--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -34,14 +34,14 @@ padding-top: 20px;
   <div class="form-row">
     <div class="col-md-6 mb-3">
       <label for="validationTooltip01">First name</label>
-      <input type="text" class="form-control" id="validationTooltip01" name="firstname" id="firstname" placeholder="Abu Musaddiq" required>
+      <input type="text" class="form-control" id="validationTooltip01" name="firstname" id="firstname" placeholder="first name" required>
       <div class="valid-tooltip">
         Looks good!
       </div>
     </div>
     <div class="col-md-6 mb-3">
       <label for="validationTooltip02">Last name</label>
-      <input type="text" class="form-control" id="validationTooltip02" name="lastname" id="lastname" placeholder="Zamani" required>
+      <input type="text" class="form-control" id="validationTooltip02" name="lastname" id="lastname" placeholder="last name" required>
       <div class="valid-tooltip">
         Looks good!
       </div>
@@ -61,7 +61,7 @@ padding-top: 20px;
   </div>
    <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationServer03">EmailId</label>
+      <label for="validationServer03">Email Id</label>
       <input type="email" name="email" id="email" placeholder="Email ID" class="form-control " id="validationServer03"  required>
       <div class="invalid-feedback">
         Please provide an EmailId.
